feat: add ImageRestControlller
